@@ -1,6 +1,7 @@
 Changes between 2.1.1 and [NEXT VERSION]
 ----------------------------------------
 
+- fix assertion rewriting on files with windows newlines on some Python versions
 - refine test discovery by package/module name (--pyargs), thanks Florian Mayer
 - fix issue69 / assertion rewriting fixed on some boolean operations
 - fix issue68 / packages now work with assertion rewriting
